more projects added

--- a/index.html
+++ b/index.html
@@ -144,6 +144,27 @@
                         <p>Generates 12 random employees using HTML, CSS, JavaScript and a third-party API.</p>
                     </div>
                 </div>
+                <div class="card">
+                    <a href="https://taeverenele.github.io/MemoryGame/"target="_blank"><img src="./img/memory-game.png" alt="form"></a>
+                    <div class="card-description">
+                        <h3>Memory Card Game</h3>
+                        <p>Memory game created with HTML, CSS and vanilla JavaScript.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="https://taeverenele.github.io/TicTacToe/"target="_blank"><img src="./img/tic-tac-toe.jpg" alt="form"></a>
+                    <div class="card-description">
+                        <h3>Tic Tac Toe</h3>
+                        <p>Tic Tac Toe game you can play against the computer, created with HTML, CSS and vanilla JavaScript.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="https://taeverenele.github.io/RSVP-web-application/"target="_blank"><img src="./img/rsvp.jpg" alt="form"></a>
+                    <div class="card-description">
+                        <h3>RSVP application</h3>
+                        <p>An RSVP app where you can add people and then edit and remove them as necessary. Created using HTML, CSS and JavaScript.</p>
+                    </div>
+                </div>
             </div>
             <!-- contact -->
             <div id="contact">
